Fixed scoring bug, made options easier to press on mobile

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -502,6 +502,14 @@ footer {
 
 .option-box {
   display: flex;
+  .flex-wrap(wrap);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+  @media @mobile {
+    display: block;
+  }
+  
   .option {
     .flex(0 0 50%);
     padding: 0 10px;
@@ -511,9 +519,6 @@ footer {
       padding: 8px 0;
     }
   }
-  .flex-wrap(wrap);
-  margin-top: 10px;
-  margin-bottom: 10px;
 
 }
 
